css/plan.css
/* Fonts */
@font-face {
    font-family: "neutra-bold";
    src:url("../fonts/neutra/Neutraface2Text-Bold.eot");
    src:url('../fonts/neutra/Neutraface2Text-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/neutra/Neutraface2Text-Bold.woff') format('woff'),
        url('../fonts/neutra/Neutraface2Text-Bold.ttf') format('truetype'),
        url("../fonts/neutra/Neutraface2Text-Bold.svg#neutra-bold") format("svg");
}

@font-face {
    font-family: "hera-bold";
    src:url("../fonts/hera/HeraBig-SemiBold.eot");
    src:url('../fonts/hera/HeraBig-SemiBold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/hera/HeraBig-SemiBold.woff') format('woff'),
        url('../fonts/hera/HeraBig-SemiBold.ttf') format('truetype'),
        url("../fonts/hera/HeraBig-SemiBold.svg#hera-bg") format("svg");
}

/* Reset */
* { box-sizing:border-box; }
html, body { margin:0; padding:0; }
h1, h2, h3, h4, h5, h6 { margin-top:0px; margin-bottom:0px; }
a { text-decoration:none; }
nav ul { list-style-type:none; margin:0; padding:0; }
nav ul li { display:inline-block; }
iframe { border:none; }
hr { border:none; height:1px; margin:0 auto; padding:0; }
.mobileHide { display:none; }
.mobileOnly { display:block; }
.nobreak { white-space:nowrap; }
footer p { margin:0; padding:0; }
.jumpToPoint { visibility:hidden; position:absolute; top:-25px; left:0px; }


/* Typography */
.typ-littleTitle { font-weight:normal; text-transform:uppercase; font-family:"neutra-bold"; letter-spacing:1px; font-size:13px; }
.typ-littleTitle { letter-spacing:1.3px; }
.typ-categoryTitle { font-size:15px; font-weight:normal; text-transform:uppercase; font-family:"neutra-bold"; letter-spacing:1px; }
.typ-categoryTitle { letter-spacing:1.3px; }
.typ-body { font-weight:normal;text-transform:none;  font-family:"garamond-premier-pro-caption"; font-size:20px; line-height:25px; margin-bottom:10px; }
.typ-subsection-header { font-weight:normal; font-family:"garamond-premier-pro-caption"; font-size:24px; line-height:30px; margin-bottom:20px; }
.typ-title { font-weight:normal; font-family:"hera-bold"; font-size:30px; line-height:40px; letter-spacing:1px; text-transform:uppercase; -webkit-text-stroke-width:1px; text-stroke-width:1px; }

/* Colors */
a, a:link, a:hover, a:link, a:active, a span, a:link span, a:hover span, a:link span, a:active span { color:#F26342; }
nav a, nav a:link, nav a:hover, nav a:link, nav a:active, p, span, h1, h2, h3, h4, h5, h6, hr { color:#1B468D; }
nav.mobile { border:1px solid #1B468D; }
nav.mobile .view { display:none; }
nav.mobile label:first-of-type { border-right:1px solid #1B468D; }
nav.mobile .view:checked + label { background:#1B468D; color:white; }
nav.mobile .view:not(:checked) + label { color:#1B468D; background:white; }
footer { background:#F1F1F1; -webkit-box-shadow: 0px 4px 30px black; -moz-box-shadow: 0px 4px 30px black; box-shadow: 0px 4px 30px black; }
hr { background-color:#1B468D; }
section.list > hr, section.list > section hr.mobileOnly { background-color:#CBCBCB; }


/* Position */
header nav.primary ul li { vertical-align:middle; }
header nav.primary ul li.plan { position:absolute; right:6.67vw; top:36px; }
header nav.primary ul li.plan a { padding-bottom:6px; }

nav.mobile { margin:0 auto; }
nav.mobile label { display:inline-block; text-align:center; line-height:30px; }

section { position:relative; }
section.map { position:relative; }
section.map iframe { z-index:0; position:relative; }
nav.secondary ul { text-align:center; }
nav.secondary li { display:block; }

main { position:relative;  }
section { text-align:center; }
section article { display:inline-block; text-align:left; vertical-align:top; }
section article header { text-align:center; }
section article header img { vertical-align:top; }
section article h4 { text-indent:35px; text-align:left; position:relative; }
.hotel:not(.venue) h4, #thingstodo h4, #explore h4, #wheretoeat h4 { text-indent:30px;  }
section article h4 span { position:relative; }
.mapTitleStarter:before { display:inline-block; position:absolute; left:-70px; top:-2px; }
.hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { left:-60px; }

footer { position:fixed; left:0; bottom:-170px; text-align:center; z-index:10; }
footer .content { position:relative; left:0px; }
footer .content span:not(:last-of-type):after { position:relative; left:5px; top:0; }

/* Size */
body { padding-bottom:240px; }
h2 { margin-bottom:20px; }
hr { width:170px; }
body > header { padding-top:20px; padding-bottom:20px; }
body > header, main > section:not(.map) { margin-left:6.67vw; margin-right:6.67vw; }
body > footer { height:200px; padding-left:6.67vw; padding-right:6.67vw; }
body > footer p.typ-body { margin-bottom:0px; }
body > header nav.primary, main > section:not(.map) { margin-top:0px; margin-bottom:0px; }
body > header nav.primary ul li img { height:50px; }

nav.mobile { width:150px; height:30px; margin:20px auto 30px auto; }
nav.mobile label { border:none; height:100%; width:50%; }

section.map > iframe { width:100%; height:calc(100vh - 70px); }

nav.secondary > ul { margin-bottom:70px; }
nav.secondary li { margin:0 20px; line-height:40px; }

section.list > section { margin-bottom:40px; margin: 0 auto; }
section.list > hr.mobileOnly { margin-bottom:70px; }
section > header hr { margin-bottom:50px; }
section > header img.titleImage { width:100px; margin-bottom:15px; }
section > header p { margin:0 auto; padding-bottom:40px; }

section > article { width:100%; margin-bottom:40px; }
section#explore > article { margin-bottom:0px; }
section#wheretostay > article { max-width:300px; }
.hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { width:16px; }
section > article header { margin:0; }
section > article header img { display:none; }
section > article h3 { margin:0 auto 30px 0; }
section > article h4 { margin-bottom:20px; }
section > article hr { display:none; margin-top:40px; margin-bottom:40px; }
.mapTitleStarter:before { width:25px; }
section > article p { margin:0 0 10px 0; }
section > article p:last-of-type { margin:0; }
section > article p.contact { margin-top:10px;  }
section.list > section > hr.mobileOnly { margin:0 auto 40px auto; }
footer { width:100%; line-height:30px; -moz-font-feature-settings:'lnum' 1; -ms-font-feature-settings:'lnum' 1; -o-font-feature-settings:'lnum' 1; -webkit-font-feature-settings:'lnum' 1; font-feature-settings:'lnum' 1; }
footer header { margin-bottom:15px; /* text below has 5px of extra line-height, so ends up being 20px */ }
footer .content span:not(:last-of-type) { vertical-align:middle; margin-right:10px; }

/* Content & Animation */
a:hover { border-bottom:1px solid #F26342; }
nav a:hover { border-bottom:1px solid #1B468D; }
li.homepage a:hover { border-bottom:0; }
nav.mobile label:hover { cursor:pointer; }
footer .content span:not(:last-of-type):after { content:"·"; }

.airports .mapTitleStarter:before { content:url("../pins/airport.svg"); }
.buses .mapTitleStarter:before { content:url("../pins/bus.svg"); }
.hotel .mapTitleStarter:before { content:url("../pins/hotel.svg"); }
.hotel.venue .mapTitleStarter:before { content:url("../pins/venue.svg"); }
#wheretoeat .mapTitleStarter:before { content:url("../pins/food.svg"); }
#thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before { content:url("../pins/activity.svg"); }

@media (min-width:490px) {
    /* Reset */
    /* Typography */
    /* Position */
    nav.secondary li { display:inline-block; }
    /* Size */
    main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
    article, section.list > section p { max-width:400px; }
    article { margin-left:36px; margin-right:36px;  }
    #explore article { max-width:380px; margin-left:50px; margin-right:50px; }
    footer span:not(:last-of-type) { margin-right:20px; }
    footer span:not(:last-of-type):after { left:10px; }
    /* Animation */
}
@media (min-width:550px) {
    body { padding-bottom:250px; }
}
@media (min-width:600px) {
    /* Reset */
    /* Typography */
    .typ-littleTitle { font-size:15px; }
    /* Position */
    /* Size */
    body > header, main > section:not(.map) { margin-left:40px; margin-right:40px; }
    body > footer { padding-left:40px; padding-right:40px;  }
    header nav.primary ul li.plan { right:40px; }
    header nav.primary ul li.plan a { padding-bottom:8px; }
    h2 { margin-bottom:30px;  }
    section > header img.titleImage { width:170px; }
    section > header img.titleImage { margin-bottom:30px; }
    section > article header img { display:inline-block; width:296px; height:296px; margin-bottom:30px; }
    footer { bottom:-150px; }
    footer header { line-height:50px; margin-bottom:25px; }
    /* Animation */
}
@media (min-width:610px) {
    body { padding-bottom:240px; }
}
@media (min-width:768px) {
    /* Reset */
    /* Typography */
    /* Position */
    /* Size */
    ul { display:inline-block; }
    /* Animation */
}
@media (min-width:1024px) {
    /* Reset */
    .mobileHide { display:block; }
    .mobileOnly { display:none; }
    /* Typography */
    /* Position */
    nav.mobile { display:none; }
    /* Size */
    main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
    section > article { width:calc(33.33% - 60px); }
    section > article, section#explore article { margin-left:0px; margin-right:0px; }
    section > article:not(:nth-of-type(3n)) { margin-right:30px; }
    section#explore article h4 { text-align:left; }
    section.list > section p { max-width:620px; }
    section > article hr { display:block; }
    section > article header img { height:22.8vw; width:22.8vw; max-width:342px; }
    section.map > iframe { width:100%; height:50vh; }
    section.map { margin-bottom:30px; }
    /* Animation */
}
@media (min-width:1180px) {
    /* Reset */
    /* Typography */
    /* Position */
    /* Size */
    .typ-title { font-size:36px; line-height:50px; letter-spacing:2px; }
    section > header img.titleImage { margin-bottom:40px; }
    section.list > section { margin-bottom:90px; }
    /* Animation */
}
@media (min-width:1600px) {
    /* Reset */
    /* Typography */
    /* Position */
    /* Size */
    body {
        max-width:1600px;
    }
    /* Animation */
}

